Croppr css fix

--- a/app/src/styles/generic.sass
+++ b/app/src/styles/generic.sass
@@ -297,6 +297,13 @@ html
         background-color: white
 
 
+// Fixes for other modules
+
+
+.croppr
+    display: block !important  // inline-block can result in bottom gap due to line-height etc
+
+
 // Custom
 
 .clickable
